# scout2

./: CMakeLists.txt  README.md  build.sh  knowledge_src.py
flight-controller/: .gitignore  CMakeLists.txt  README.md
flight-controller/include/: types.h
flight-controller/src/: config.h  main.c
flight-controller/src/core/: attitude_estimator.c  attitude_estimator.h  flight_controller.c  flight_controller.h  pid_controller.c  pid_controller.h
flight-controller/src/drivers/: esc.c  esc.h  mpu6050.c  mpu6050.h  system.c  system.h
flight-controller/src/include/: config.h  types.h
flight-controller/src/utils/: logger.c  logger.h  timing.h
flight-controller/tests/: attitude_estimator_tests.c  attitude_estimator_tests.h  mpu6050_tests.c  mpu6050_tests.h  pid_controller_tests.c  pid_controller_tests.h  test_framework.c  test_framework.h  test_main.c
